[workspace]

members = [
    "./functions/sphfunctions",
    "./functions/datafunctions",
    "./functions/tree_algorithm",
    "structures",
    "speed_up",
    "./tests/sedov_blast_wave",
    "./tests/kelvin_helmholtz",
    "./tests/toy_star",
    "./tests/turbulent_gas",
    "./tests/find_neighbors",
]
