[workspace]

members = [
    "./src/sphfunctions",
    "./src/datafunctions",
    "./src/partdistribution",
    "./src/tree_algorithm",
    "./src/structures",
    "speed_up",
    "./tests/sedov_blast_wave",
    "./tests/sod_shock_tube",
    "./tests/kelvin_helmholtz",
    "./tests/toy_star",
    "./tests/accretion_disc",
    "./tests/turbulent_gas",
    "./tests/find_neighbors",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Narvaez J <janarvaez@unal.edu.co"]
description = "Implementation of the SPH algorithm in the Rust programming language"
readme = "./README.md"
license-file = "./LICENSE"

[workspace.dependencies]
rayon = "1.7"
csv = "1.1"