[package]
name = "kelvin_helmholtz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7"
tree_algorithm = { path = "../tree_algorithm" }
sphfunctions = { path = "../sphfunctions" }
structures = { path = "../structures" }
