[package]
name = "sphfunctions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = "0.3"
rayon = "1.7"
structures = { path = "../structures" }
tree_algorithm = { path = "../tree_algorithm" }
