[package]
name = "sphfunctions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = { version = "0.8.5", default-features = false }
rayon = "1.7"
rand_pcg = "0.3.1"
rand_core = "0.6.4"
structures = { path = "../structures" }
tree_algorithm = { path = "../tree_algorithm" }
