[package]
name = "datafunctions"
version.workspace = true
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv.workspace = true
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
rand_core = "0.6.4"
structures = { path = "../structures" }