[package]
name = "sphfunctions"
version.workspace = true
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon.workspace = true
structures = { path = "../structures" }
tree_algorithm = { path = "../tree_algorithm" }