[package]
name = "accretion_disc_phantom"
version.workspace = true
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv.workspace = true
spfunc = "0.1.0"
tree_algorithm = { path = "../../src/tree_algorithm" }
sphfunctions = { path = "../../src/sphfunctions" }
datafunctions = { path = "../../src/datafunctions" }
partdistribution = { path = "../../src/partdistribution" }
structures = { path = "../../src/structures" }

[build-dependencies]
rayon.workspace = true
