[package]
name = "find_neighbors"
version.workspace = true
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree_algorithm = { path = "../../src/tree_algorithm" }
datafunctions = { path = "../../src/datafunctions" }
structures = { path = "../../src/structures" }