[package]
name = "toy_star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rayon = "1.7"
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
rand_core = "0.6.4"
spfunc = "0.1.0"
tree_algorithm = { path = "../../src/tree_algorithm" }
sphfunctions = { path = "../../src/sphfunctions" }
datafunctions = { path = "../../src/datafunctions" }
structures = { path = "../../src/structures" }